--- a/style.css
+++ b/style.css
@@ -1,22 +1,54 @@
+body{
+    background-color: rgb(88 49 174);
+}
+
 h1{
     text-transform: uppercase;
+    text-align: center;
+    color: whitesmoke;
+}
+
+p{
+    text-align: center;
+    color: whitesmoke;
+}
+
+#main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .play{
     font-size: 18px;
     padding: 10px 15px;
+    margin: 10px;
     font-weight: bold;
     background-color: #4caf4f;
     border-radius: 15px;
     color: white;
+    transition: all 0.2s ease-in-out;
 }
 
 .play:hover {
     background-color: #2c6d2e;
+    cursor: pointer;
+    transform: scale(1.05);
 }
 
 .play:active {
     background-color: red;
+}
+
+#choice{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 300px;
+    margin: auto;
+    border-radius: 100px;
+    color: whitesmoke;
 }
 
 .rules{
