--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ p{
     height: 100px;
     width: 300px;
     margin: auto;
+    padding: 10px;
     border-radius: 100px;
     color: whitesmoke;
     text-align: center;
