--- a/style.css
+++ b/style.css
@@ -56,6 +56,13 @@ p{
     border: 2px dotted whitesmoke;
 }
 
+#score{
+    text-align: center;
+    color: #441b9f;
+    background-color: rgba(245, 245, 245, 0.688);
+    padding: 10px;
+}
+
 .rules{
     display: flex;
     transform: rotate(90deg);    
