--- a/style.css
+++ b/style.css
@@ -84,13 +84,15 @@ p{
     text-align: center;
     font-size: larger;
     border: 2px dotted whitesmoke;
+    background-color: #242424;
 }
 
 #score{
     text-align: center;
-    color: #441b9f;
-    background-color: rgba(245, 245, 245, 0.688);
+    color: whitesmoke;
+    background-color: #242424;
     padding: 10px;
+    border: 1px dotted whitesmoke;
 }
 
 .rules{
