--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ p{
 }
 
 #choice{
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     height: 100px;
